# pa-pattern-complexity

./: .clang-format  .gitattributes  .gitignore  README.md  foo.txt  meson.build
.circleci/: config.yml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: greetings.yml
data/: PAXMIN_G.XPT.snapshot  PAXMIN_H.XPT.csv.snapshot  file_count.txt  paxraw_c.xpt.snapshot  paxraw_d.xpt.snapshot  sha256sum.txt
doc/: NHANES 2003-2004 PAM Data Documentation.htm  NHANES 2005-2006 PAM Data Documentation.htm  NHANES 2011-2012 PAM Data Documentation.htm  NHANES 2013-2014 PAM Data Documentation.htm  NHANES-Data-cleanup.md
script/: bootstrap  bootstrap.ps1  cibuild  download-data  xpt-to-csv.r
src/: nhanes.vs.sln
src/app/PatternPA.Container/: Container.cs  PatternPA.Container.csproj
src/app/PatternPA.Container/Properties/: AssemblyInfo.cs
src/app/PatternPA.Core/: PatternPA.Core.csproj
src/app/PatternPA.Core/Extensions/: BitArrayEx.cs  EnumerableEx.cs
src/app/PatternPA.Core/Interfaces/: IAlphabet.cs  IArchiver.cs  ICheckpointFactory.cs  IEntropy.cs  IRandomBitGenerator.cs  IRepository.cs
src/app/PatternPA.Core/Model/: ActivityCodes.cs  DynamicAverage.cs  Entity.cs  Entropy.cs  EntropyResult.cs  Group.cs  IntervalSnapshots.cs
src/app/PatternPA.Data/: README
src/app/PatternPA.ServiceInfrastructure/: PatternPA.ServiceInfrastructure.csproj
src/app/PatternPA.Utils/: BinaryFileWriter.cs  FileWriter.cs  GZipArchiver.cs  PatternPA.Utils.csproj  RandomEventGenerator.cs  RecordsConverter.cs  TimeSpanExtension.cs
src/nhanes-csv-split/: arg_parser.h  main.cpp  nhanes-csv-split.vcproj  nhanes-csv-split.vcxproj
src/old/: PatternPA.sln
src/old/app/PatternPA.Utils/: Shuffle.cs  (+6 more)
src/test/PatternPA.Test.Integration/: AbstractGroupTest.cs  AbstractIntegrationTest.cs  App.config  ManagementFixture.cs  packages.config
src/test/PatternPA.Test.Utils/: AbstractUtilsTest.cs  BinaryConverterTest.cs  PalTimedProbabilityTest.cs  RandomEventGeneratorTest.cs
(+140 files in other folders)
